--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.social-btn {
+  color: white;
+  background-color: blue;
+  text-align: center;
+  border-radius: 8px;
+  padding: 15px 32px;
+  border: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.social-btn-txt{
+  color: white;
+  text-decoration: none;
+}
