--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,13 @@
         <li><%= link_to "About", about_path %></li>
         <div class="pull-right user-info">
           <% if current_user %>
-            <%= current_user.name %> - <%= link_to "Sign Out", session_path(current_user), method: :delete %>
+            <div class="user-text">
+            <%= current_user.name %>
+            <%= link_to "Sign Out", session_path(current_user), method: :delete %>
+          </div>
+          <div class="user-pic">
+            <img src = "<%= avatar_url(current_user) %>">
+          </div>
           <% else %>
             <%= link_to "Sign In", new_session_path %> or
             <%= link_to "Sign Up", new_user_path %>
