--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,7 +20,18 @@
 </div>
 
 <h2>Posts</h2>
-<%= render @user.posts %>
+<% if user_history(@user.posts) %>
+  <%= render @user.posts %>
+<% else %>
+  <%= "#{@user.name} has not submitted any posts yet." %>
+<% end %>
 
 <h2>Comments</h2>
-<%= render @user.comments %>
+<% if user_history(@user.comments) %>
+  <%= render @user.comments %>
+<% else %>
+  <%= "#{@user.name} has not submitted any comments yet." %>
+<% end %>
+
+<h2>Favorite Posts</h2>
+<%= render 'posts/favorite_post', posts: @user.favorites %>
